<resources>
    <string name="app_name">WicketIQ</string>
    <string name="splash">splash</string>
    <string name="wicketiq">WicketIQ</string>
    <string name="ipl_quiz">IPL Quiz</string>
    <string name="ipl">IPL</string>
    <string name="legends_quiz">Legends Quiz</string>
    <string name="know_the_legends">Know the Legends</string>
    <string name="test_quiz">Test Quiz</string>
    <string name="the_ultimate_test">The Ultimate Test</string>
    <string name="t20_quiz">T20 Quiz</string>
    <string name="fast_game_faster_minds">Fast Game, Faster Minds</string>
    <string name="odi_quiz">ODI Quiz</string>
    <string name="one_day_infinite_memories">One Day, Infinite Memories</string>
    <string name="mixed_quiz">Mixed Quiz</string>
    <string name="all_formats_one_challenge">All Formats. One Challenge.</string>
    <string name="hit_with_league">Hit with League</string>
    <string name="bg">bg</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="scorecard">Scorecard</string>
    <string name="category_name">Category Name</string>
    <string name="time_5s">Time: 5s</string>
    <string name="question_will_appear_here">Question will appear here</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="submit">Submit</string>
    <string name="skip">Skip</string>
    <string name="next">next</string>
    <string name="check">check</string>
    <string name="quiz_completed">Quiz Completed!</string>
    <string name="your_score">Your Score:</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="default_web_client_id">81713760990-ogikh25ousb1if91qlomksv4afn816fc.apps.googleusercontent.com</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="john_doe">John Doe</string>
    <string name="rank">Rank: #</string>
    <string name="user_name">User Name</string>
    <string name="rank_1">Rank: 1</string>
    <string name="top_user">Top User</string>
</resources>