<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F0E1"
    android:gravity="center_horizontal"
    android:padding="24dp">

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@android:drawable/edit_text"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="#0E0E0E"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmail"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@android:drawable/edit_text"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="#0B0A0A" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="78dp"
        android:backgroundTint="@color/black"
        android:paddingVertical="12dp"
        android:text="@string/login"
        android:textColor="@color/white" />

</RelativeLayout>
